{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 208,
  "lineage": "1b8b0252-b298-e762-6306-73646a0dbbe4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "agones_allocator",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.116.203.196",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-24T11:03:38.137-07:00",
            "id": "projects/game-465613/regions/europe-central2/addresses/agones-allocator-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "agones-allocator-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "game-465613",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/regions/europe-central2/addresses/agones-allocator-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "matchmaking_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.116.170.102",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-07-24T11:03:38.179-07:00",
            "id": "projects/game-465613/regions/europe-central2/addresses/matchmaking-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "matchmaking-lb-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "game-465613",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/regions/europe-central2/addresses/matchmaking-lb-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_game_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7000-8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-16T05:45:30.487-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/game-465613/global/firewalls/allow-game-tcp",
            "log_config": [],
            "name": "allow-game-tcp",
            "network": "https://www.googleapis.com/compute/v1/projects/game-465613/global/networks/game-vpc",
            "priority": 1000,
            "project": "game-465613",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/global/firewalls/allow-game-tcp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "game-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.game_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-07-16T05:45:30.942-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/game-465613/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/game-465613/global/networks/game-vpc",
            "priority": 1000,
            "project": "game-465613",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/global/firewalls/allow-internal",
            "source_ranges": [
              "10.10.1.0/24",
              "10.20.0.0/16",
              "10.30.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.game_vpc",
            "google_compute_subnetwork.game_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nodeports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-16T10:19:30.516-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/game-465613/global/firewalls/allow-nodeports",
            "log_config": [],
            "name": "allow-nodeports",
            "network": "https://www.googleapis.com/compute/v1/projects/game-465613/global/networks/game-vpc",
            "priority": 1000,
            "project": "game-465613",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/global/firewalls/allow-nodeports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "test-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.game_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_websocket",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-16T05:45:30.931-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/game-465613/global/firewalls/allow-websocket",
            "log_config": [],
            "name": "allow-websocket",
            "network": "https://www.googleapis.com/compute/v1/projects/game-465613/global/networks/game-vpc",
            "priority": 1000,
            "project": "game-465613",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/global/firewalls/allow-websocket",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "matchmaking"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.game_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "game_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC for game platform components",
            "enable_ula_internal_ipv6": false,
            "id": "projects/game-465613/global/networks/game-vpc",
            "mtu": 0,
            "name": "game-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6805762595708609085",
            "project": "game-465613",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/global/networks/game-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-16T05:36:59.488-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/game-465613/regions/europe-central2/routers/game-nat-router",
            "name": "game-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/game-465613/global/networks/game-vpc",
            "project": "game-465613",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/regions/europe-central2/routers/game-nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.game_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "game_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "game-465613/europe-central2/game-nat-router/game-platform-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "game-platform-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "game-465613",
            "region": "europe-central2",
            "router": "game-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.game_vpc",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "game_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-16T05:37:00.071-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/game-465613/regions/europe-central2/subnetworks/game-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "game-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/game-465613/global/networks/game-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "game-465613",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.30.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/game-465613/regions/europe-central2/subnetworks/game-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.game_vpc"
          ]
        }
      ]
    }
  ]
}